name:                benchmark-test
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/sgraf812/benchmark-test#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           2018 Sebastian Graf
category:            Development
build-type:          Simple
cabal-version:       >=1.10


executable benchmark-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5


benchmark benchmarks
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     benchmarks
  main-is:            Bench.hs
  ghc-options:        -Wall -rtsopts

  build-depends:
    base >= 4.7 && < 5,
    criterion
